--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
 
-    <%= yield %>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-6">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
